--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.1.0
+absl-py==2.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.12
 aiosignal==1.3.2
@@ -16,14 +16,15 @@ cycler==0.12.1
 cytoolz==1.0.1
 Django==4.1.13
 djangorestframework==3.15.2
-djongo==1.3.7  # Keep this OR mongoengine
+# Use only one DB connector: djongo OR mongoengine
+djongo==1.3.7
+# mongoengine==0.29.1  # Commented to avoid conflict
 dnspython==1.16.0
 fonttools==4.54.1
 frozenlist==1.5.0
 idna==3.10
 kiwisolver==1.4.7
 matplotlib==3.9.2
-mongoengine==0.29.1  # Keep this OR djongo
 multidict==6.1.0
 numpy==1.26.4
 opt_einsum==3.4.0
