--- a/requirements.txt
+++ b/requirements.txt
@@ -14,17 +14,16 @@ colorama==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
 cytoolz==1.0.1
-Django==4.1.13
+Django==4.2.11
 djangorestframework==3.15.2
-# Use only one DB connector: djongo OR mongoengine
 djongo==1.3.7
-# mongoengine==0.29.1  # Commented to avoid conflict
 dnspython==1.16.0
 fonttools==4.54.1
 frozenlist==1.5.0
 idna==3.10
 kiwisolver==1.4.7
 matplotlib==3.9.2
+mongoengine==0.29.1
 multidict==6.1.0
 numpy==1.26.4
 opt_einsum==3.4.0
