--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,16 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.12
-aiosignal==1.3.2
-annotated-types==0.7.0
 asgiref==3.8.1
-attrs==25.1.0
 certifi==2025.1.31
-cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-cmake==3.31.4
 colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-cytoolz==1.0.1
-Django==4.2.11
+Django==4.2.10  # Compatible with djangorestframework
 djangorestframework==3.15.2
-djongo==1.3.7
-dnspython==1.16.0
-fonttools==4.54.1
-frozenlist==1.5.0
+gunicorn==21.2.0  # Recommended for production server on Render
 idna==3.10
-kiwisolver==1.4.7
-matplotlib==3.9.2
-mongoengine==0.29.1
-multidict==6.1.0
-numpy==1.26.4
-opt_einsum==3.4.0
-packaging==24.1
-pillow==11.0.0
-protobuf==4.25.6
-psycopg2==2.9.10
-pycparser==2.22
-pycryptodome==3.21.0
-pydantic==2.10.6
-pydantic_core==2.27.2
-pymongo==3.11.4
-pyotp==2.9.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
+psycopg2==2.9.10  # PostgreSQL database adapter
 python-dotenv==1.0.1
-pytz==2025.1
-requests==2.32.3
-scipy==1.14.1
-six==1.16.0
 sqlparse==0.5.3
-toolz==1.0.0
-types-requests==2.32.0.20241016
-typing_extensions==4.12.2
 tzdata==2025.1
-urllib3==2.3.0
-websockets==13.1
-whitenoise==6.9.0
-yarl==1.18.3
+typing_extensions==4.12.2
+whitenoise==6.9.0  # For serving static files
+requests==2.32.3
